muncher/programs/test-cases/call-6.mnc.stderr
error: variable `hello` is not defined
   --> test.mnc:17:8
   |
17 | a.call(hello);
   |        ^^^^^ variable `hello` is not defined

