muncher/programs/test-cases/call-6.mnc
let a = object A {
    .call($e:expr) {
        print("generic: ");
        print(e);
        print("\n");
    }
    .call(specific) {
        print("specific\n");
    }
};

let var = 3;
let bar = "Hello";
a.call(var);
a.call(specific);
a.call(bar);
a.call(hello);
